--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,10 @@
   "require": {
     "php": ">=8.1"
   },
+  "require-dev": {
+    "workerman/workerman": "^5.0",
+    "symfony/var-dumper": "^7.0"
+  },
   "autoload": {
     "psr-4": {
       "Workbunny\\MysqlProtocol\\": "src",
