--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     "php": ">=8.1"
   },
   "require-dev": {
-    "workerman/workerman": "^5.0",
-    "symfony/var-dumper": "^7.0"
+    "workerman/workerman": "^4.0 | ^5.0",
+    "symfony/var-dumper": "^6.0 | ^7.0"
   },
   "autoload": {
     "psr-4": {
